# 213-exam-registration

./: .gitignore  Pipfile  README.md  import_passwords.py  import_usernames.py  ldap_search.py  manage.py  pyproject.toml  requirements.txt  run_script.sh  update.sh
examreg/: settings.py  urls.py  wsgi.py
examreg/settings/: base.py  development.py  production.py
project/: urls.py  wsgi.py
project/apps/registration/: admin.py  apps.py  models.py  tests.py  views.py
project/settings/: base.py  development.py  production.py
project/templates/: 404.html  base_generic.html
registration/: admin.py  backends.py  forms.py  middleware.py  models.py  test_slots.py  tests.py  urls.py  views.py
registration/migrations/: 0001_initial.py  0003_auto_20180526_0426.py  0004_user_timezone.py  0005_auto_20180528_0311.py  0007_auto_20180530_2148.py  0008_auto_20180605_0344.py  0010_auto_20180615_0619.py  0011_add_simple_history.py  0013_auto_20180628_0653.py  0014_auto_20180628_2314.py  0015_auto_20180628_2324.py  0016_auto_20180802_0046.py  0018_auto_20180807_2046.py  0022_githubtoken_historicalgithubtoken.py  0023_auto_20200226_0501.py  0024_auto_20200228_0506.py  0025_auto_20200228_0701.py  0026_auto_20200622_0814.py
registration/static/: styles.css
registration/templates/: 400.html  403.html  500.html  base_generic.html
registration/templates/partials/: messages.html  navbar.html
registration/templates/registration/: .index.html.swp  auth_failure.html  course_detail.html  course_edit.html  course_github_landing.html  course_manage.html  course_manage_edit.html  (+15 more)
(+13 files in other folders)
