[tool.poetry]
name = "examreg"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.5"
pytz = "^2020.1"
ldap3 = "^2.7"
psycopg2-binary = "^2.8.5"
django-crispy-forms = "^1.9.1"
django-simple-history = "^2.10.0"
Django = "~=2.2"
authlib = "^0.14.3"
pygithub = "^1.51"
python-decouple = "^3.3"

[tool.poetry.dev-dependencies]
django-debug-toolbar = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
